--- a/core/Makefile
+++ b/core/Makefile
@@ -1876,7 +1876,9 @@ $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(DISTTOOLS)
 	   $(if $(OEM_OTA_CONFIG), -o $(OEM_OTA_CONFIG)) \
 	   $(BUILT_TARGET_FILES_PACKAGE) $@
 
-AOSPB_TARGET_PACKAGE := $(PRODUCT_OUT)/$(AOSPB_MOD_VERSION).zip
+
+CUSTOM_TARGET_PACKAGE := $(PRODUCT_OUT)/hazy_$(TARGET_PRODUCT)-$(PLATFORM_VERSION)-$(shell date +%Y%m%d).zip
+
 
 .PHONY: otapackage bacon bootzip
 otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
